<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ln_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical">


    <TableRow
        android:id="@+id/tb_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_index"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_song"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/bg_bo_goc"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_mp3"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:maxLines="2"
                android:text="@string/txt_name"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />


            <TextView
                android:id="@+id/tv_singer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:text="@string/txt_singer"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_time"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_play_song_item"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:src="@drawable/iv_play"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white" />

</LinearLayout>