<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@color/alpha"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:padding="10dp"
        android:src="@drawable/ic_mp3"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/txt_name"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_album"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_album"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_Duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_time"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:padding="0dp"
            android:progressTint="@color/white"
            android:thumbTint="@color/black" />

    </LinearLayout>
</LinearLayout>