<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/alpha"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/txt_name"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/tv_album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_album"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_Duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_time"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </TableRow>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:progress="0"
        android:progressTint="@color/white"
        android:thumbTint="@color/purple_100" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/iv_shuffle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:padding="8dp"
            android:src="@drawable/iv_shuffle"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:src="@drawable/ic_previous"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_play"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="35dp"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/iv_play"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:src="@drawable/ic_next"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_open"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:padding="7dp"
            android:src="@drawable/ic_top"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white" />
</LinearLayout>